fixed footer being cropped

--- a/static/style.css
+++ b/static/style.css
@@ -7,4 +7,7 @@
   font-weight: bold;
 }
 
-
+.footer {
+  width: 100%;
+  margin-top:5em;
+}
